--- a/Web/Web.config
+++ b/Web/Web.config
@@ -15,6 +15,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="30" />
+    </authentication>
   </system.web>
   <system.codedom>
     <compilers>
